--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- My Css -->
     <link rel="stylesheet" href="style.css">
     <!-- Akhir Css -->
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap" rel="stylesheet">
     <title>My Portofolio | Ervina Novlianti</title>
   </head>
   <body>
