--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- Akhir Css -->
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap" rel="stylesheet" href="style.css">
-    <title>My Portofolio | Ervina Novlianti</title>
+    <title>Ervina Novlianti || portfolio</title>
   </head>
   <body>
     <!-- Navbar -->
@@ -66,7 +66,7 @@
             <div class="row justify-content-center fs-5 text-center ">
                 <div class="col-6">
                     <p>Mahasiswa Aktif STMIK Profesional jurusan Sistem Informasi</p>
-                    <p>Berpengalaman membuat projek dengan HTML, CSS, PHP dengan Framework Laravel, SQL dan Javascript</p>
+                    <p>Tertarik menjadi Web Developer dengan HTML, CSS, PHP dengan Framework Laravel, SQL dan Javascript</p>
                 </div>
                 
             </div>
