--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         <section class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a> 
+              <a class="nav-link active" aria-current="page" href="#home">Home</a> 
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Galerry</a>
+              <a class="nav-link" href="#gallery">Galerry</a>
             </li>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
         </section>
@@ -57,7 +57,7 @@
     <!-- Akhir Jumbotron -->
     <!-- About -->
     <section class="about">
-        <div class="container">
+        <div class="container" id="about">
             <div class="row text-center mb-3">
                 <div class="col">
                     <h2>About Me</h2>
@@ -75,7 +75,7 @@
     </section>
     <!-- Akhir About -->
     <!-- Project -->
-    <section id="project">
+    <section id="gallery">
     <div class="container">
       <div class="row text-center mb-3">
         <div class="col">
