--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- Akhir Jumbotron -->
     <!-- About -->
     <section class="about">
-        <div class="container" id="about">
+        <div class="container" style="background-color: #057069;">
             <div class="row text-center mb-3">
                 <div class="col">
                     <h2>About Me</h2>
